Mon Sep 24 14:21:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
	  Add default_allow and default_deny parameters to query_parse.
	  These allow a list of field names to be specified which will be
	  searched by default (instead of searching all free-text fields).
	  Needs latest SVN version of xapian.

Sat Sep 22 09:21:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add 'rb' to another call to open that
	  I missed.

Thu Sep 20 15:20:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Start list of individuals who have contributed in any
	  way.

Tue Sep 18 13:23:15 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py,xappy/indexerconnection_doctest1.txt:
	  Document, and test, that it's okay to use an iterator for
	  UnprocessedDocument.fields.

Tue Sep 18 13:05:53 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Clarify some of the documentation about
	  facets.

Fri Sep 07 16:51:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* ChangeLog: Tidy-up whitespace.

Wed Sep 05 15:33:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* examples/fileindex.py,examples/search.py,perftest/index_from_dump.py,
	  perftest/search_speed.py: Change all remaining references to
	  "secore" name, except in the compatibility wrapper and the tests
	  for that, to "xappy".

Wed Sep 05 15:29:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Change references to secore to references
	  to xappy.
	* xappy/fieldmappings_doctest1.txt: Add test which I wrote ages
	  ago, but had forgotten to commit.

Wed Sep 05 15:05:57 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/,testsuite/runtests.py: Add compatibility layer so that
	  old scripts can run without needing to change from "secore" to