@@ -1,3 +1,9 @@
+Fri Sep 28 16:12:35 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* testsuite/coverage.py: Update copy of coverage.py to latest
+	  version (with patches applied) to get correct results with
+	  python2.5
+
 Mon Sep 24 14:21:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
